run on pull_request, but with more types

--- a/.github/workflows/swarco_itc3.yml
+++ b/.github/workflows/swarco_itc3.yml
@@ -6,8 +6,8 @@
 
 name: Swarco ITC-3
 on:
-  push:
-    types: [ labeled ]
+  pull_request:
+    types: [ opened, reopnened, synchronize, labeled ]
   schedule:
     # schedule runs only on the default branch. time is in UTC.
     # * is a special character in YAML so you have to quote this string.
