--- a/.github/workflows/swarco_itc3.yml
+++ b/.github/workflows/swarco_itc3.yml
@@ -7,7 +7,7 @@
 name: Swarco ITC-3
 on:
   pull_request:
-    types: [ opened, reopnened, synchronize, labeled ]
+    types: [ opened, reopened, synchronize, labeled ]
   schedule:
     # schedule runs only on the default branch. time is in UTC.
     # * is a special character in YAML so you have to quote this string.
