--- a/.github/workflows/gem_supervisor.yaml
+++ b/.github/workflows/gem_supervisor.yaml
@@ -13,8 +13,23 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        core: ['3.1.2', '3.1.3', '3.1.4', '3.1.5', '3.2', '3.2.1', '3.2.2']
     runs-on: ${{ matrix.os }}
+
     steps:
+    - name: Set log id
+      shell: bash
+      id: log_id
+      run: |
+        echo "LOG_ID=\
+        gem-supervisor-\
+        ${{ matrix.os }}-\
+        core-${{ matrix.core }}-\
+        ${{ github.run_id }}-\
+        ${{ github.run_number }}-\
+        ${{ github.run_attempt }}\
+        " >> $GITHUB_OUTPUT
+
     - name: Checkout repo
       uses: actions/checkout@v4
 
@@ -26,32 +41,38 @@ jobs:
 
     - name: Start supervisor in background
       shell: bash
-      run: bundle exec rsmp supervisor --config config/simulator/supervisor.yaml 2>&1 > simulator.log &
+      run: |
+        bundle exec rsmp supervisor \
+        --config config/simulator/supervisor.yaml \
+        2>&1 > simulator-${{ steps.log_id.outputs.LOG_ID }}.log \
+        &
 
     - name: Run tests
       shell: bash
-      run: bundle exec rspec --format Validator::Brief --format Validator::Details --out log/validation.log spec/supervisor
+      run: |
+        bundle exec rspec spec/supervisor \
+        --format Validator::Brief \
+        --format Validator::Details \
+        --out validator-${{ steps.log_id.outputs.LOG_ID }}.log
       env:
         SUPERVISOR_CONFIG: config/gem_supervisor.yaml
+        CORE_VERSION: ${{ matrix.core}}
 
     - name: Show detailed log
-      if: always()
-      run: cat log/validation.log
-
-    - name: Rename validation.log
-      if: always()
-      run: mv log/validation.log log/validation_ruby_$(date +%F_%H-%M-%S).log
-
-    - name: Upload validation.log
+      shell: bash
+      if: always() # even if previous steps failed
+      run: cat validator-${{ steps.log_id.outputs.LOG_ID }}.log
+    
+    - name: Upload validator.log
       if: always()
       uses: actions/upload-artifact@v4
       with:
-        name: rspec-validation-${{ matrix.os }}
-        path: log/validation_ruby_*.log
-
+        name: validator-${{ steps.log_id.outputs.LOG_ID }}.log
+        path: validator-${{ steps.log_id.outputs.LOG_ID }}.log
+    
     - name: Upload simulator.log
       if: always()
       uses: actions/upload-artifact@v4
       with:
-        name: simulator-log-${{ matrix.os }}
-        path: simulator.log
+        name: simulator-${{ steps.log_id.outputs.LOG_ID }}.log
+        path: simulator-${{ steps.log_id.outputs.LOG_ID }}.log
