--- a/.github/workflows/gem_tlc_os.yaml
+++ b/.github/workflows/gem_tlc_os.yaml
@@ -12,8 +12,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        core: ['3.1.2', '3.1.3', '3.1.4', '3.1.5', '3.2', '3.2.1', '3.2.2']
-    runs-on: ubuntu-latest
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
 
     steps:
     - name: Set log id
@@ -22,8 +22,7 @@ jobs:
       run: |
         echo "LOG_ID=\
         gem-tlc-\
-        ubuntu-latest-\
-        core-${{ matrix.core }}-\
+        ${{ matrix.os }}-\
         ${{ github.run_id }}-\
         ${{ github.run_number }}-\
         ${{ github.run_attempt }}\
@@ -55,7 +54,6 @@ jobs:
         
       env:
         SITE_CONFIG: config/gem_tlc.yaml
-        CORE_VERSION: ${{ matrix.core}}
     
     - name: Show detailed log
       shell: bash
