--- a/.github/workflows/gem_tlc.yaml
+++ b/.github/workflows/gem_tlc.yaml
@@ -7,7 +7,7 @@
 name: Gem TLC
 on: push
 jobs:
-  test:
+  validator:
     timeout-minutes: 10
     strategy:
       fail-fast: false
@@ -24,6 +24,7 @@ jobs:
         gem-tlc-\
         ubuntu-latest-\
         core-${{ matrix.core }}-\
+        run-\
         ${{ github.run_id }}-\
         ${{ github.run_number }}-\
         ${{ github.run_attempt }}\
