--- a/.github/workflows/gem_supervisor_os.yaml
+++ b/.github/workflows/gem_supervisor_os.yaml
@@ -4,7 +4,7 @@
 # documentation.
 # This workflow will run rspec
 
-name: Gem supervisor
+name: Gem supervisor OS matrix
 on: push
 jobs:
   validator:
@@ -12,8 +12,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        core: ['3.1.2', '3.1.3', '3.1.4', '3.1.5', '3.2', '3.2.1', '3.2.2']
-    runs-on: ubuntu-latest
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
 
     steps:
     - name: Set log id
@@ -22,8 +22,8 @@ jobs:
       run: |
         echo "LOG_ID=\
         gem-supervisor-\
-        ubuntu-latest-\
-        core-${{ matrix.core }}-\
+        ${{ matrix.os }}-\
+        core-latest-\
         ${{ github.run_id }}-\
         ${{ github.run_number }}-\
         ${{ github.run_attempt }}\
@@ -55,7 +55,6 @@ jobs:
         --out validator-${{ steps.log_id.outputs.LOG_ID }}.log
       env:
         SUPERVISOR_CONFIG: config/gem_supervisor.yaml
-        CORE_VERSION: ${{ matrix.core}}
 
     - name: Show detailed log
       shell: bash
