adjust log name

--- a/.github/workflows/gem_supervisor.yaml
+++ b/.github/workflows/gem_supervisor.yaml
@@ -24,6 +24,7 @@ jobs:
         gem-supervisor-\
         ubuntu-latest-\
         core-${{ matrix.core }}-\
+        run-\
         ${{ github.run_id }}-\
         ${{ github.run_number }}-\
         ${{ github.run_attempt }}\
