--- a/.github/workflows/gem_supervisor_os.yaml
+++ b/.github/workflows/gem_supervisor_os.yaml
@@ -24,6 +24,7 @@ jobs:
         gem-supervisor-\
         ${{ matrix.os }}-\
         core-latest-\
+        run-\
         ${{ github.run_id }}-\
         ${{ github.run_number }}-\
         ${{ github.run_attempt }}\
