--- a/.github/workflows/tecsen_tmacs.yaml
+++ b/.github/workflows/tecsen_tmacs.yaml
@@ -12,7 +12,7 @@ on:
 jobs:
   validator:
     if: ${{ github.event_name == 'schedule' || contains(github.event.pull_request.labels.*.name, 'testhub') }}
-    timeout-minutes: 10
+    #timeout-minutes: 10
     strategy:
       matrix:
         core: ['3.2.2']
