--- a/.github/workflows/swarco_itc3.yaml
+++ b/.github/workflows/swarco_itc3.yaml
@@ -17,6 +17,9 @@ jobs:
   validator:
     if: ${{ github.event_name == 'schedule' || contains(github.event.pull_request.labels.*.name, 'testhub') }}
     runs-on: [ self-hosted, Linux, X64, itc3 ]
+    strategy:
+      matrix:
+        core: ['3.1.2','3.2.0']
 
     steps:
     - name: Set log id
@@ -48,6 +51,7 @@ jobs:
         --out validator-${{ steps.log_id.outputs.LOG_ID }}.log
       env:
         SITE_CONFIG: config/swarco_itc3.yaml
+        CORE_VERSION: ${{ matrix.core}}
 
     - name: Show detailed log
       shell: bash
