--- a/.github/workflows/gem_tlc.yaml
+++ b/.github/workflows/gem_tlc.yaml
@@ -8,12 +8,12 @@ name: Gem TLC
 on: push
 jobs:
   validator:
-    timeout-minutes: 10
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         core: ['3.1.2', '3.1.3', '3.1.4', '3.1.5', '3.2', '3.2.1', '3.2.2']
-    runs-on: ubuntu-latest
+      fail-fast: false
 
     steps:
     - name: Set log id
