--- a/.github/workflows/gem_tlc.yaml
+++ b/.github/workflows/gem_tlc.yaml
@@ -8,6 +8,7 @@ name: Gem TLC
 on: push
 jobs:
   validator:
+    timeout-minutes: 10
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
