--- a/.github/workflows/cross_rs4s.yaml
+++ b/.github/workflows/cross_rs4s.yaml
@@ -43,6 +43,7 @@ jobs:
       uses: ruby/setup-ruby@v1
       with:
         bundler-cache: true
+        ruby-version: "3.3.6"
 
     - name: Run tests
       run: |
