--- a/.github/workflows/cross_rs4s.yaml
+++ b/.github/workflows/cross_rs4s.yaml
@@ -14,7 +14,7 @@ on:
     # schedule runs only on the default branch. time is in UTC.
     # * is a special character in YAML so you have to quote this string.
     # run every night at 10:00PM UTC.
-    - cron:  '0 8-18 * * *'
+    - cron:  '0 8 * * *'
 jobs:
   validator:
     #if: ${{ github.event_name == 'schedule' || contains(github.event.pull_request.labels.*.name, 'testhub') }}
