--- a/.github/workflows/gem_tlc.yaml
+++ b/.github/workflows/gem_tlc.yaml
@@ -37,6 +37,7 @@ jobs:
       uses: ruby/setup-ruby@v1
       with:
         bundler-cache: true
+        cache-version: 1
 
     - name: Start TLC in background
       shell: bash
