--- a/config/kapsch_cross_rs4s.yaml
+++ b/config/kapsch_cross_rs4s.yaml
@@ -10,8 +10,6 @@ rsmp_versions: all
 intervals:
   timer: 1
   watchdog: 60
-#  timer: 0.1
-#  watchdog: 0.1
 timeouts:
   watchdog: 65
   acknowledgement: 1
@@ -23,14 +21,14 @@ timeouts:
   command: 300
   command_response: 30
   alarm: 3
-  disconnect: 20 # RSMP_WATCHDOG_TIMEOUT_MSEC + RSMP_WATCHDOG_PERIOD_MSEC 
+  disconnect: 20
   startup_sequence: 45
   functional_position: 60
   priority_completion: 5
   yellow_flash: 2
 secrets:
   security_codes:
-    1: '1111'   #spec/site/tlc/invalid_command_spec.rb has hardcoded security code 1111
+    1: '1111'
     2: '2222'
 components:
   main:
@@ -82,20 +80,12 @@ components:
     CZ+76000=101DL010:
 items:
   plans: [1,2]
-
   traffic_situations: []
-#  emergency_routes: [1,2,3,4,5,6]
-#  emergency_routes: [1] #no support for multiple simultaneous emergency routes
   emergency_routes: []
-
   inputs: [1,3,8]
   force_input: 5
   outputs: [1,3,8]
 startup_sequence: 'efg'
-#alarm_activation:       # how to trigger alarms by forcing inputs
-#  A0303:                # alarm A0302
-#    input: 7            # can be triggered by forcing input 8
-#    component: DL1      # and will active on component DL1
 alarms:
   A0302: 
     activation_input: 1
