--- a/.github/workflows/kapsch_etx.yaml
+++ b/.github/workflows/kapsch_etx.yaml
@@ -4,7 +4,7 @@
 # documentation.
 # This workflow will run rspec
 
-name: Kapsch
+name: Kapsch ETX
 on:
   pull_request:
     types: [ opened, reopened, synchronize, labeled ]
@@ -16,7 +16,7 @@ on:
 jobs:
   validator:
     if: ${{ github.event_name == 'schedule' || contains(github.event.pull_request.labels.*.name, 'testhub') }}
-    runs-on: [ self-hosted, Linux, X64, kapsch ]
+    runs-on: [ self-hosted, Linux, X64, kapsch-etx ]
     strategy:
       matrix:
         core: ['3.1.2', '3.1.3', '3.1.4', '3.1.5', '3.2.0', '3.2.1', '3.2.2']
@@ -28,7 +28,7 @@ jobs:
       id: log_id
       run: |
         echo "LOG_ID=\
-        kapsch-\
+        kapsch-etx-\
         core-${{ matrix.core }}-\
         run-\
         ${{ github.run_id }}-\
@@ -52,7 +52,7 @@ jobs:
         --format Validator::Details \
         --out validator-${{ steps.log_id.outputs.LOG_ID }}.log
       env:
-        SITE_CONFIG: config/kacsch.yaml
+        SITE_CONFIG: config/kapsch_etx.yaml
         CORE_VERSION: ${{ matrix.core}}
 
     - name: Show detailed log
