--- a/.github/workflows/gem_supervisor_os.yaml
+++ b/.github/workflows/gem_supervisor_os.yaml
@@ -11,7 +11,7 @@ jobs:
     timeout-minutes: 10
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
       fail-fast: false
     runs-on: ${{ matrix.os }}
 
