--- a/config/semaforica_cartesio.yaml
+++ b/config/semaforica_cartesio.yaml
@@ -1,7 +1,7 @@
-port: 12111
-ips: all
-core_version: '3.2.2'
-sxl: tlc      # Traffic Light Controller. We are testing a site, not a server.
+# Config for testing Cross RS4S traffic light controller.
+# The settings are used for starting a local supervisor listening for the site tested
+# See https://rsmp-nordic.github.io/rsmp_validator/config/
+sxl: tlc
 sxl_version: '1.2.1'
 intervals:   
   timer: 1    # main validator timer resolution in seconds
@@ -30,48 +30,22 @@ components:
     CAR_SG_001:
     CAR_SG_002:
     CAR_SG_003:
-    CAR_SG_004:
-    CAR_SG_005:
-    CAR_SG_006:
-    CAR_SG_007:
-    CAR_SG_008:
-    CAR_SG_009:
-    CAR_SG_010:
-    CAR_SG_011:
-    CAR_SG_012:
-    CAR_SG_013:
-    CAR_SG_014:
-    CAR_SG_015:
   detector_logic:       # Each detector logic must be specified manually
     CAR_DL_001:
     CAR_DL_002:
     CAR_DL_003:
-    CAR_DL_004:
-    CAR_DL_005:
-    CAR_DL_006:
-    CAR_DL_007:
-    CAR_DL_008:
-    CAR_DL_009:
-    CAR_DL_010:
-    CAR_DL_011:
-    CAR_DL_012:
-    CAR_DL_013:
-    CAR_DL_014:
-    CAR_DL_015:
-    CAR_DL_016:
 items:
   plans: [1,2,3,4]
   traffic_situations: [1,2,3,4]
   emergency_routes: [1]
   inputs: [1,2,3,4]
-  force_input: 1
   outputs: [1,2,3,4]
 startup_sequence: 'efg'
+alarm_triggers:
+  A0302:
+    input: 16
+    component: CAR_DL_001
 secrets:
   security_codes:
     1: 1234
     2: 12341234
-alarms:
-  A0302: 
-    activation_input: 16   # input 2 activates the control block
-    component: CAR_DL_016  # detector logic 2 is set to error by control block.
