--- a/config/gem_tlc.yaml
+++ b/config/gem_tlc.yaml
@@ -1,6 +1,8 @@
-# Config for testing a site running on localhost (e.g. from the rsmp gem)
+# Config for testing RSMP Nordic traffic light controller emulator.
 # The settings are used for starting a local supervisor listening for the site tested
+# See https://rsmp-nordic.github.io/rsmp_validator/config/
 port: 13111
+sxl: tlc
 sxl_version: '1.2.1'
 intervals:
   timer: 0.1
@@ -24,7 +26,6 @@ timeouts:
 components:
   main:
     TC:
-      ntsOId: KK+AG9998=001TC000
   signal_group:
     A1:
     A2:
@@ -33,12 +34,6 @@ components:
   detector_logic:
     DL1:
     DL2:
-inputs:
-  total: 8
-  programming:
-    7:
-      raise_alarm: A0302
-      component: DL1
 items:
   plans: [1,2]
   traffic_situations: [1,2]
@@ -46,10 +41,11 @@ items:
   inputs: [1,3,8]
   outputs: [1,3,8]
 startup_sequence: 'efg'
+alarm_triggers:
+  A0302:
+    input: 7
+    component: DL1
 secrets:
   security_codes:
     1: '1111'
     2: '2222'
-log:
-  watchdogs: false
-  acknowledgements: false
