--- a/.github/workflows/swarco_itc3.yaml
+++ b/.github/workflows/swarco_itc3.yaml
@@ -19,7 +19,7 @@ jobs:
     runs-on: [ self-hosted, Linux, X64, itc3 ]
     strategy:
       matrix:
-        core: ['3.1.2', '3.1.3', '3.1.4', '3.1.5', '3.2.0']
+        core: ['3.1.2', '3.1.3', '3.1.4', '3.1.5', '3.2.0', '3.2.1', '3.2.2']
       fail-fast: false
 
     steps:
