--- a/.github/workflows/cross_rs4s.yaml
+++ b/.github/workflows/cross_rs4s.yaml
@@ -15,6 +15,9 @@ on:
     # * is a special character in YAML so you have to quote this string.
     # run every night at 10:00PM UTC.
     - cron:  '0 8 * * *'
+  push:
+    branches:
+      - main
 jobs:
   validator:
     #if: ${{ github.event_name == 'schedule' || contains(github.event.pull_request.labels.*.name, 'testhub') }}
