--- a/config/cross_rs4s.yaml
+++ b/config/cross_rs4s.yaml
@@ -34,12 +34,9 @@ components:
     CZ+76000=101DL002:
     CZ+76000=101DL003:
 items:
-  plans: [1,2]  #switching to each plan takes a alot of time
-  #plans: [1,2,3,4,5]
-
+  plans: [1,2]  #switching to each plan takes a lot of time
   traffic_situations: [1,2,3]
-#  emergency_routes: [1,2,3,4,5,6]
-  emergency_routes: [1] #no support for multiple simultaneous emergency routes
+  emergency_routes: [1] # only one emergency route
   inputs: [1,3,8]
   outputs: [1,3,8]
 startup_sequence: 'efg'
