--- a/.github/workflows/cross_rs4s.yaml
+++ b/.github/workflows/cross_rs4s.yaml
@@ -4,22 +4,29 @@
 # documentation.
 # This workflow will run rspec
 
+## THIS IS FOR pksoft72 / rsmp_validator ONLY - different cron:,runs-on:,core:
+
 name: Cross RS4S
 on:
+  workflow_dispatch:
   pull_request:
     types: [ opened, reopened, synchronize, labeled ]
   schedule:
     # schedule runs only on the default branch. time is in UTC.
     # * is a special character in YAML so you have to quote this string.
     # run every night at 10:00PM UTC.
-    - cron:  '0 22 * * *'
+    - cron:  '0 7,11,15 * * *'
+  push:
+    branches:
+      - main
+      - PK_*
 jobs:
   validator:
-    if: ${{ github.event_name == 'schedule' || contains(github.event.pull_request.labels.*.name, 'testhub') }}
-    runs-on: [ self-hosted, Linux, X64, cross-rs4s ]
+    #if: ${{ github.event_name == 'schedule' || contains(github.event.pull_request.labels.*.name, 'testhub') }}
+    runs-on: [ self-hosted, Linux, X64, pksoft72-debian ]
     strategy:
       matrix:
-        core: ['3.1.2', '3.1.3', '3.1.4', '3.1.5', '3.2.0', '3.2.1', '3.2.2']
+        core: [ '3.2.2']
       fail-fast: false
 
     steps:
