--- a/.github/workflows/cross_rs4s.yaml
+++ b/.github/workflows/cross_rs4s.yaml
@@ -19,7 +19,7 @@ jobs:
     runs-on: [ self-hosted, Linux, X64, cross-rs4s ]
     strategy:
       matrix:
-        core: ['3.1.2', '3.1.3', '3.1.4', '3.1.5', '3.2.0', '3.2.1', '3.2.2']
+        core: ['3.2.2', '3.2.1', '3.2.0', '3.1.5', '3.1.4', '3.1.3', '3.1.2' ] # test last version first
       fail-fast: false
 
     steps:
