--- a/.github/workflows/semaforica_cartesio.yaml
+++ b/.github/workflows/semaforica_cartesio.yaml
@@ -43,6 +43,7 @@ jobs:
       uses: ruby/setup-ruby@v1
       with:
         bundler-cache: true
+        cache-version: 1
 
     - name: Run tests
       run: |
