Add self-hosted option to Ruby setup

--- a/.github/workflows/semaforica_cartesio.yaml
+++ b/.github/workflows/semaforica_cartesio.yaml
@@ -42,6 +42,7 @@ jobs:
     - name: Install Ruby and gems
       uses: ruby/setup-ruby@v1
       with:
+        self-hosted: true
         bundler-cache: true
         cache-version: 2
 
