--- a/.github/workflows/lightmotion_satellite.yaml
+++ b/.github/workflows/lightmotion_satellite.yaml
@@ -19,7 +19,7 @@ jobs:
     runs-on: [ self-hosted, Linux, X64, lightmotion ]
     strategy:
       matrix:
-        core: ['3.2.1']
+        core: ['3.2.2', '3.2.1', '3.2.0', '3.1.5', '3.1.4', '3.1.3', '3.1.2']
       fail-fast: false
 
     steps:
