improve logging for auto nodes

--- a/config/gem_supervisor.yaml
+++ b/config/gem_supervisor.yaml
@@ -49,3 +49,7 @@ secrets:
   security_codes:
     1: '1111'
     2: '2222'
+log:
+  prefix: '[TLC       ]'
+  acknowledgements: false
+  watchdogs: false
