--- a/config/simulator/tlc.yaml
+++ b/config/simulator/tlc.yaml
@@ -55,7 +55,7 @@ security_codes:
   1: '1111'
   2: '2222'
 log:
-  id: true
+  prefix: '[TLC]       '
   json: true
   acknowledgements: false
   watchdogs: false
